# RoboticaAutonoma-BoxDetector

./: CMakeLists.txt  README.md
apps/: BoxDetector.cpp  BoxDetector.h  detector.cpp
config01/file/: cloud_0000.txt  cloud_0050.txt  cloud_0150.txt  cloud_0230.txt  cloud_0250.txt
config07/file/: cloud_0000.txt  cloud_0100.txt  cloud_0200.txt  cloud_0230.txt  cloud_0250.txt
